[gd_scene load_steps=18 format=3 uid="uid://bdlpvt0unfnlb"]

[ext_resource type="Texture2D" uid="uid://r6eoadt3ikkj" path="res://interface/sprites/EditBlack.png" id="1_fq47e"]
[ext_resource type="Texture2D" uid="uid://cssall88vp8of" path="res://interface/sprites/EditGrey.png" id="2_d54s2"]
[ext_resource type="Texture2D" uid="uid://c4bste46y21d7" path="res://interface/sprites/TrachcanLightRed.png" id="3_fcnol"]
[ext_resource type="Texture2D" uid="uid://bv182qm2ri3hp" path="res://interface/sprites/TrachcanRed.png" id="4_j1j72"]
[ext_resource type="Script" path="res://interface/scripts/OpenSelfDestructMenu.gd" id="5_m017x"]
[ext_resource type="Script" path="res://interface/scripts/EditCharacterName.gd" id="6_7smcv"]
[ext_resource type="Texture2D" uid="uid://ci5xarq4642by" path="res://interface/sprites/CheckMarkBlack.png" id="7_5bjyj"]
[ext_resource type="Texture2D" uid="uid://cguhfg56mkwg3" path="res://interface/sprites/CheckMarkAllBlack.png" id="8_syjjn"]
[ext_resource type="Script" path="res://interface/scripts/SelfDestruct.gd" id="9_ftg4e"]
[ext_resource type="Texture2D" uid="uid://boq0ps6xqkrac" path="res://interface/sprites/CrossBlack.png" id="10_88qe6"]
[ext_resource type="Texture2D" uid="uid://dcshk56cc86wv" path="res://interface/sprites/CrossAllBlack.png" id="11_x37lo"]
[ext_resource type="Script" path="res://interface/scripts/RefuseSelfDestruction.gd" id="12_y1lc0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yl0ec"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 0.376471)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0, 0, 0, 0.105882)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j2wsv"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 0.376471)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 25.0
shadow_color = Color(0, 0, 0, 0.105882)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7as5j"]
bg_color = Color(0.847059, 0.847059, 0.847059, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 0.376471)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 25.0
shadow_color = Color(0, 0, 0, 0.105882)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uwvha"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 0.376471)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 25.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sjxug"]
bg_color = Color(0.968627, 0.968627, 0.968627, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 0, 0, 0.278431)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="CharacterWindow" type="Control"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1320.0
offset_bottom = -980.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 600.0
offset_bottom = 100.0
theme_override_styles/panel = SubResource("StyleBoxFlat_yl0ec")

[node name="RenameButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 460.0
offset_top = 25.0
offset_right = 510.0
offset_bottom = 75.0
scale = Vector2(1.02, 1.02)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_fq47e")
texture_pressed = ExtResource("2_d54s2")
texture_hover = ExtResource("2_d54s2")
texture_disabled = ExtResource("2_d54s2")
texture_focused = ExtResource("2_d54s2")

[node name="SelfDestructButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 530.0
offset_top = 25.0
offset_right = 570.0
offset_bottom = 75.0
scale = Vector2(1.1, 1)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_fcnol")
texture_pressed = ExtResource("4_j1j72")
texture_hover = ExtResource("4_j1j72")
texture_disabled = ExtResource("4_j1j72")
texture_focused = ExtResource("4_j1j72")
script = ExtResource("5_m017x")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 10.0
offset_right = 445.0
offset_bottom = 90.0
mouse_default_cursor_shape = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_j2wsv")
theme_override_styles/focus = SubResource("StyleBoxFlat_7as5j")
theme_override_styles/read_only = SubResource("StyleBoxFlat_j2wsv")
placeholder_text = "Ваш персонаж"
editable = false
context_menu_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
caret_blink = true
script = ExtResource("6_7smcv")

[node name="PickButton" type="Button" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 10.0
offset_right = 445.0
offset_bottom = 90.0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_uwvha")
theme_override_styles/hover = SubResource("StyleBoxFlat_uwvha")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uwvha")
theme_override_styles/disabled = SubResource("StyleBoxFlat_uwvha")
theme_override_styles/focus = SubResource("StyleBoxFlat_uwvha")
text = "Ваш персонаж"
alignment = 0

[node name="SelfDestructMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 600.0
offset_bottom = 100.0

[node name="SelfDestructPanel" type="Panel" parent="SelfDestructMenu"]
layout_mode = 0
offset_right = 600.0
offset_bottom = 100.0
theme_override_styles/panel = SubResource("StyleBoxFlat_sjxug")

[node name="SelfDestructQuestion" type="Label" parent="SelfDestructMenu/SelfDestructPanel"]
layout_direction = 1
layout_mode = 0
offset_right = 600.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0.913725, 0, 0, 0.843137)
theme_override_font_sizes/font_size = 25
text = "Удалить персонажа?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="СonfirmButton" type="TextureButton" parent="SelfDestructMenu/SelfDestructPanel"]
layout_direction = 1
layout_mode = 0
offset_left = 50.0
offset_top = 10.0
offset_right = 313.0
offset_bottom = 273.0
scale = Vector2(0.3, 0.3)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("7_5bjyj")
texture_pressed = ExtResource("8_syjjn")
texture_hover = ExtResource("8_syjjn")
texture_disabled = ExtResource("8_syjjn")
texture_focused = ExtResource("8_syjjn")
script = ExtResource("9_ftg4e")

[node name="RefuseButton" type="TextureButton" parent="SelfDestructMenu/SelfDestructPanel"]
layout_direction = 1
layout_mode = 0
offset_left = 480.0
offset_top = 20.0
offset_right = 743.0
offset_bottom = 283.0
scale = Vector2(0.22, 0.22)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("10_88qe6")
texture_pressed = ExtResource("11_x37lo")
texture_hover = ExtResource("11_x37lo")
texture_disabled = ExtResource("11_x37lo")
texture_focused = ExtResource("11_x37lo")
script = ExtResource("12_y1lc0")

[connection signal="gui_input" from="CharacterPanel" to="LineEdit" method="_on_gui_input"]
[connection signal="pressed" from="RenameButton" to="LineEdit" method="on_rename_button_pressed"]
[connection signal="pressed" from="SelfDestructButton" to="SelfDestructButton" method="on_self_destruct_button_pressed"]
[connection signal="text_changed" from="LineEdit" to="LineEdit" method="_on_text_changed"]
[connection signal="text_submitted" from="LineEdit" to="LineEdit" method="_on_text_submitted"]
[connection signal="pressed" from="SelfDestructMenu/SelfDestructPanel/СonfirmButton" to="SelfDestructMenu/SelfDestructPanel/СonfirmButton" method="on_confirm_self_destruct_button_pressed"]
[connection signal="pressed" from="SelfDestructMenu/SelfDestructPanel/RefuseButton" to="SelfDestructMenu/SelfDestructPanel/RefuseButton" method="on_refuse_button"]
